# immersiveRT

./: .env.example  .gitignore  Makefile  docker-compose.yml
.claude/: CLAUDE.md
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: huge-position-drift-makes-pho.md
.planning/phases/01-server-and-transport-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-SECURITY.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-signaling-turn-and-deployment/: 02-01-PLAN.md  02-01-SUMMARY.md  (+17 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
client/: index.html  package-lock.json  package.json  phone.html  tsconfig.json  vite.config.ts
client/public/: phone.html  phone.js
client/scripts/: dump-packet-fixture.ts
client/src/: phone.ts  playerStore.ts  room.ts  scene.ts  types.ts  webxr.d.ts
client/tests/: decode.test.ts  encode.test.ts  kalman.test.ts  orientation.test.ts  phone-rotate.test.ts  seq-drop.test.ts  target-state.test.ts  webxr.test.ts  zupt.test.ts
docker/: Dockerfile.client  Dockerfile.server
docker/coturn/: docker-entrypoint.sh  turnserver.conf
docker/nginx/: nginx.conf
mobile/ios-app/: DEVICE-SETUP.md
server/: Cargo.toml
server/src/: broker.rs  echo.rs  lib.rs  main.rs  pairing_token.rs  room_registry.rs  signaling.rs  turn_creds.rs  ws_server.rs  wt_server.rs
server/tests/: broker_relay.rs  ws_echo.rs
(+226 files in other folders)
