[package]
name = "immersive-rt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
wtransport = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "sync"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
