[package]
name = "immersive-rt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
wtransport = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "sync", "time"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6.2"
hmac = "0.13"
sha1 = "0.11"
sha2 = "0.11"
rand = { version = "0.10", features = ["std"] }
base64 = "0.22"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
axum = "0.8"
subtle = "2"
